# dev_greenova

./: .bandit  .bash_aliases  .djlintrc  .editorconfig  .env  .env.example  .env.vault  .envrc  .eslintrc  .gitattributes  .gitignore  .gitignore_global  .markdownlint-cli2.jsonc  .npmrc  .pre-commit-config.yaml  .pylintrc  .pylintrc-django  .pylintrc-pre-commit  .pyrightconfig.json  0002_auto_add_responsibility.py  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  MAKEFILE.md  Makefile  PLAN.md  Pipfile  README  README.md  SETUP_PY.md  clean_output_with_nulls.csv  conftest.py  constraints.txt  css.md  debug_imports.py  eslint.config.js  gitignore  isort.cfg  js.md  mypy.ini  (+10 more)
.config/: .gitconfig  config.fish
.devcontainer/: Dockerfile  Makefile  README.md  devcontainer.json  docker-bake.hcl  docker-compose.yml  entrypoint.sh  make.sh  manifest.json  package.json  post-create.sh  post_create.sh  post_start.sh  requirements.txt  run.sh
.devcontainer/scripts/: cleanup.sh  entrypoint.sh  initializeCommand.sh  install.sh  onCreateCommand.sh  postAttachCommand.sh  postCreateCommand.sh  postStartCommand.sh  preBuild.sh  preStopCommand.sh  setup.sh  test.sh  updateContentCommand.sh
.devskim/: config.json
.github/: .copilot-codeGeneration-instructions.md  .copilot-review-instructions.md  .copilot-test-instructions.md  COMMIT_CONVENTION.md  copilot-instructions.md  dependabot.yml
.github/prompts/: bug-report.prompt.md  business-scope.prompt.md  devcontainer-fix.prompt.md  github-issue.prompt.md  gpt-4o.prompt.md  merge-strategy.prompt.md  o4-mini.prompt.md  pre-commit-fix.prompt.md  technical-writing.prompt.md
.github/workflows/: codeql.yml  dotenv-vault.yml  pylint.yml  super-linter.yml  tasks.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  Deleteme.md  INSTALL.md  TESTING.md  TODO.md  TUTORIALS.md  chatdata.md  htmx.md  hyperscript.md  style_guide.md
docs/project/: container_environment.md  front_end_interactivity.md  ui_design_and_styling.md
docs/resources/: snyk_devcontainer_fix.md
docs/resources/config/: dotenv.md
docs/resources/css/: tailwind.md
docs/resources/git/: merge-instructions.txt  merging.md
docs/resources/py/: python.md
docs/resources/python/: jinga2.md
docs/templates/: code-review-feedback.md  commit-message-template.md  github-issue-template.md  pull-request-template.md
global/: admin.py  models.py
greenova/: clean_output_with_nulls.csv  db.sqlite3-shm  db.sqlite3-wal  dummy_data.csv  manage.py  plan.md  settings.py
greenova/accounts/: admin.py  models.py  urls.py  views.py
greenova/accounts/migrations/: 0001_initial.py
greenova/analytics/: actions.py  data_utils.py  filters.py  generics.py  managers.py  tests.py  urls.py  views.py  viewsets.py
greenova/analytics/templatetags/: analytics_tags.py
greenova/audit/: models.py
greenova/auditing/: admin.py  models.py  test_auditing.py
greenova/authentication/: forms.py  test_authentication.py  tests.py  urls.py  views.py
greenova/authentication/account/: login.html  request_login_code.html
greenova/authentication/templatetags/: auth_tags.py
greenova/charts/: services.py  urls.py  views.py
greenova/chatbot/: _pb2.py  chatbot_pb2.py  chatdata_pb2.py  compile_proto.py  create_input.py  forms.py  models.py  proto_utils.py  services.py  tests.py  urls.py  views.py
greenova/chatbot/data/: chatbot.proto  chatdata-serialised.protobin  chatdata.proto  chatdata_pb2.py
greenova/chatbot/templatetags/: chatbot_tags.py
greenova/company/: admin.py  middleware.py  models.py  models.pyi  test_company.py  views.py  views.pyi
greenova/company/templatetags/: company_tags.py
greenova/core/: commons.py  constants.py  mixins.py  models.py  signals.py  test_core.py  types.pyi  views.py
greenova/core/templatetags/: core_tags.py
greenova/dashboard/: models.py  test_dashboard.py  tests.py  urls.py  views.py
greenova/dashboard/migrations/: 0001_initial.py
greenova/dashboard/templatetags/: dashboard_tags.py
greenova/demo/: urls.py  views.py
greenova/feedback/: proto_utils.py
greenova/greenova/: asgi.py  settings.py  urls.py  views.py  wsgi.py
greenova/landing/: tests.py  urls.py  views.py
greenova/login/: apps.py  forms.py  tests.py  views.py
greenova/mechanisms/: admin.py  apps.py  figures.py  models.py  services.py  urls.py  views.py
greenova/mechanisms/migrations/: 0001_initial.py  0002_initial.py  (+9 more)
greenova/obligations/: actions.py  admin.py  apps.py  constants.py  filters.py  forms.py  managers.py  models.py  models.pyi  signals.py  types.py  urls.py  utils.py  views.py
greenova/procedures/: figures.py  plotlyapp.py  urls.py  views.py
greenova/projects/: admin.py  forms.py  models.py  pagination.py  permissions.py  test_projects.py  tests.py  urls.py  views.py
greenova/responsibility/: admin.py  figures.py  models.py  models.pyi  test_responsibility.py  views.py
greenova/settings/: development.py
greenova/templates/: base.html  base_authentication.html  dashboard.html  dropdown.html  index.html  login.html  obligations.html  users.html
greenova/users/: forms.py  forms.pyi  models.pyi  test_users.py  tests.py  views.py
greenova/utils/: actions.py  commons.py  constants.py  context_processors.py  data_utils.py  django_type_safety.py  error_handlers.py  exceptions.py  filters.py  generics.py  import_manager.py  logger.py  managers.py  mechanism_mapping.py  messages.py  mixins.py  pagination.py  permissions.py  relationship_manager.py  response_handler.py  serializers.py  tests.py  viewsets.py
logs/: .gitkeep
requirements/: base.txt  constraints.txt  dev.txt  prod.txt  requirements-dev.in  requirements-dev.txt  requirements-prod.txt  requirements.in  requirements.txt
scripts/: commit_diff.fish  ensure_django_settings.sh  file_diff.fish  fix_hyperscript.py  git_repository_health_check.fish  post_merge_analysis_origin_and_upstream.fish  pre_merge.fish  pre_merge_PR_check.fish  pre_merge_PR_check.pseudo  upgrade_npm_and_pip.sh
tools/pre_commit/: mock_settings.py  pre_commit_wrapper.py  test_pre_commit_wrapper.py
tools/scripts/: run_mypy.py  run_mypy.sh
(+251 files in other folders)
