[project]
authors = [
    { name = "Adrian Gallo", email = "agallo@enveng-group.com.au" },
]
description = "Environmental obligations management system"
license = { text = "AGPL-3.0" }
name = "greenova"
requires-python = ">=3.13"
version = "0.1.0"

[tool.djlint]
custom_blocks = "blocktranslate,block,comment,csrf_token,extends,for,if,include,load,spaceless,trans,with"
custom_html_attrs = "hx-*,data-*,_,role,aria-*"
exclude = [
    "**/.git/objects/**",
    "**/.git/subtree-cache/**",
    "**/node_modules/**",
    "**/.venv/**",
    "**/__pycache__/**",
    "**/.env",
    "**/.git/**",
    "**/.svn/**",
    "**/.hg/**",
    "**/CVS/**",
    "**/.DS_Store",
    "**/*.pyc",
    "**/.pytest_cache/**",
    "**/.vscode-server/**",
    "**/.vscode/**",
    "**/site-packages/**",
]
format = true
format_css = false
format_js = false
ignore = "H006,T002"
indent = 2
max_attribute_length = 88
max_line_length = 88
profile = "django"
require_pragma = false
use_gitignore = true

[tool.autopep8]
aggressive      = 3
exclude         = [".git", "__pycache__", ".pytest_cache", ".venv", "node_modules"]
experimental    = true
ignore          = ["E226", "E302", "E41"]
max_line_length = 88
select          = ["E", "W", "F"]
