[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "E302", "E305"]
in-place = true
recursive = true
aggressive = 3
single_quotes = true

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 88
use_gitignore = true
format_css = false
format_js = false
ignore = "H014,H015,T002"
include = "**/*.html,**/*.jinja,**/*.djhtml"
extension = "django-html,html,jinja"
preserve_blank_lines = true
preserve_leading_space = true
require_pragma = false

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
exclude = ['^migrations/.*\.py$', '^tests/.*\.py$']
mypy_path = "greenova/stubs"
explicit_package_bases = true
namespace_packages = true
strict = true
packages = ["greenova"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "greenova.settings"

[tool.bandit]
context_lines = 3
exclude = [
    "/tests",
    "/env",
    "/venv",
    "/.git",
    "*.pyc",
    "**/test_*.py",
    "**/*_test.py",
    "**/mock_*.py",
]
skips = ["B311"]
hardcoded_password_string = ["password", "passwd", "pwd", "secret"]
severity = "LOW"
confidence = "LOW"
format = "txt"
output = "bandit-results.txt"
processes = 4
exit_zero = false
recursive = true
verbose = true
exclude_dirs = ["tests", "migrations", "docs"]
