[metadata]
name = greenova
version = 1.0.0
description = Environmental Compliance Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Adrian Gallo
author_email = agallo@enveng-group.com.au
url = https://github.com/enssol/greenova
license = AGPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Environmental Services
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Scheduling
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.12.8
packages = find:
install_requires =
    Django>=5.1.5
    django-htmx>=1.21.0
    django-chartjs>=2.3.0
    whitenoise>=6.8.2
    daphne>=4.1.2
    django-compressor>=4.5.1
    django-debug-toolbar>=5.0.1
    WeasyPrint>=61.0
    django-environ>=0.11.2

[options.packages.find]
exclude =
    tests*
    docs*
    scripts*

[options.package_data]
greenova =
    templates/*
    static/*
    locale/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = greenova.settings
python_files = tests.py test_*.py *_tests.py
addopts = --reuse-db

[coverage:run]
source = greenova
omit =
    */migrations/*
    */tests/*
    */admin.py

[flake8]
max-line-length = 79
exclude = .git,*/migrations/*,*/static/*,docs/*